# Repo2Data

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: data.md  datalad.md  dataverse.md  figshare.md  gdrive.md  http.md  osf.md  s3.md  zenodo.md
examples/: checksum_example.yaml  dataverse_example.yaml  figshare_example.yaml  gzip.yaml  locator_usage.py  multiple.yaml  myst.yml  s3.yaml  zenodo.yaml
repo2data/: __init__.py  cli.py  downloader.py  manager.py  repo2data.py
repo2data/cache/: __init__.py  global_cache.py  manager.py  migration.py
repo2data/config/: __init__.py  loader.py  models.py  validator.py
repo2data/providers/: __init__.py  base.py  datalad.py  dataverse.py  figshare.py  gdrive.py  http.py  library.py  osf.py  registry.py  s3.py  zenodo.py
repo2data/utils/: __init__.py  decompressor.py  download.py  locator.py  logger.py  validation.py
